first final version

--- a/macros.tex
+++ b/macros.tex
@@ -24,6 +24,10 @@
 \newcommand{\SubExtension}{Ex(H_{V'})}
 \newcommand{\SectionHypergraph}{S_{V'}}
 
+\newcommand{\fakepar}[1]{\medskip\par\textbf{#1}\ } 
+\newcommand{\fakesubsub}[1]{\par\medskip\noindent\textbf{#1 }} 
+\newcommand{\fakesubsubC}[1]{\par\noindent\textbf{#1 }}
+
 %Residual Capacity
 \newcommand{\R}[1]{{r_f({#1})}}
 %Vertex Seperator
