--- a/master_thesis/sections/conclusion.tex
+++ b/master_thesis/sections/conclusion.tex
@@ -8,7 +8,7 @@ sparsify the standard hypergraph flow network \cite{lawler1973},
 which consists of many edges with \emph{infinite} capacity. We present
 several theoretical results, which allow us to remove such edges or even to remove
 nodes. The results are of independent interest, because they are also
-applicable on general flow networks with \emph{infinite} capacity edges.
+applicable for min-cuts on hypergraphs and general flow networks with \emph{infinite} capacity edges.
 The main practical implications are that we can remove any hypernode 
 from the hypergraph flow network and model hyperedges of size $2$ more efficiently. 
 Our final flow network combines the two techniques, which reduces 
