final final final final version

--- a/master_thesis/sections/appendix.tex
+++ b/master_thesis/sections/appendix.tex
@@ -13,7 +13,7 @@ Type & Num & $\min{|V|}$ & Avg. $|V|$ & $\max{|V|}$ & $\min{|E|}$ & Avg. $|E|$ \
 \midrule%
 \csname @@input\endcsname experiments/instances/parameter_tunning_stats1.tex 
 \midrule
-Type & $\max{|E|}$ & Avg. $|e|$ & Med. $|e|$ & Avg. $d(v)$ & Med. $d(v)$ & Avg. $\frac{|E|}{|V|}$ \\
+Type & $\max{|E|}$ & Avg. $|e|$ & Median $|e|$ & Avg. $d(v)$ & Median $d(v)$ & Avg. $\frac{|E|}{|V|}$ \\
 \midrule%
 \csname @@input\endcsname experiments/instances/parameter_tunning_stats2.tex 
 \bottomrule
@@ -34,7 +34,7 @@ Type & Num & $\min{|V|}$ & Avg.$|V|$ & $\max{|V|}$ & $\min{|E|}$ & Avg.$|E|$ \\
 \midrule%
 \csname @@input\endcsname experiments/instances/subset_benchmark_stats1.tex 
 \midrule
-Type & $\max{|E|}$ & Avg.$|e|$ & Med.$|e|$ & Avg.$d(v)$ & Med.$d(v)$ & Avg.$\frac{|E|}{|V|}$ \\
+Type & $\max{|E|}$ & Avg.$|e|$ & Median $|e|$ & Avg.$d(v)$ & Median $d(v)$ & Avg.$\frac{|E|}{|V|}$ \\
 \midrule%
 \csname @@input\endcsname experiments/instances/subset_benchmark_stats2.tex 
 \bottomrule
@@ -56,7 +56,7 @@ Type & Num & $\min{|V|}$ & Avg.$|V|$ & $\max{|V|}$ & $\min{|E|}$ & Avg.$|E|$ \\
 \midrule%
 \csname @@input\endcsname experiments/instances/full_benchmark_stats1.tex 
 \midrule
-Type & $\max{|E|}$ & Avg.$|e|$ & Med.$|e|$ & Avg.$d(v)$ & Med.$d(v)$ & Avg.$\frac{|E|}{|V|}$ \\
+Type & $\max{|E|}$ & Avg.$|e|$ & Median $|e|$ & Avg.$d(v)$ & Median $d(v)$ & Avg.$\frac{|E|}{|V|}$ \\
 \midrule%
 \csname @@input\endcsname experiments/instances/full_benchmark_stats2.tex 
 \bottomrule
