--- a/master_thesis/sections/introduction.tex
+++ b/master_thesis/sections/introduction.tex
@@ -74,8 +74,9 @@ incoroperate the \emph{global} structure of the problem.
 Therefore, they overcome the drawbacks of the \emph{FM} algorithm. However, they were overlooked for a long time because
 it was perceived as computationally expensive and impractical for (hyper)graph partitioning
 \cite{liu1998network}. \\ 
-Sanders and Schulz \cite{sanders2011engineering} successfully integrated a \emph{flow}-based refinement
-algorithm into their multilevel \emph{graph} partitioner. 
+Sanders and Schulz \cite{sanders2011engineering} develop a \emph{flow}-based
+refinement algorithm to improve a balanced $k$-way partition of a graph and integrate it
+into their multilevel \emph{graph} partitioner. 
 %The algorithm is also applicable to the more
 %complicated direct $k$-way partitioning case. 
 %In general, their basic approach is to 
