final final final final final final version

--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -128,7 +128,7 @@ We will use the following lemma in the correctness proof.
          all hypernodes of \ShortT{L}. Note, capacity of the black edges in the flow network is $\infty$.}
 \label{img:heuer_network}
 \end{figure} 
-
+\clearpage
 \begin{lemma}[Source/Sink Node Removal]
 \label{lemma:source_and_sink_removal}
 Let $G = (V,E,\capa)$ be a flow network and $f$ a maximum $(S,T)$-flow of $G$ with $|f| < \infty$.
