final final final final final final version

--- a/master_thesis/sections/introduction.tex
+++ b/master_thesis/sections/introduction.tex
@@ -103,10 +103,7 @@ can be used to improve a given bipartition of hypergraphs. Therefore, the hyperg
 must be modeled as a flow network such that each minimum cut separating two vertices
 $s$ and $t$ is computable with a maximum $(s,t)$-flow. The bipartitioning algorithm is 
 the theorectical foundation for a framework to improve balanced $k$-way partitions of hypergraphs.
-The last step is to integrate the framework into the
-$n$-level hypergraph partitioner \emph{KaHyPar} \cite{heuer2017improving} and evaluate
-the performance on a large benchmark set in comparison to different state-of-the-art 
-multilevel hypergraph partitioners. A major goal of this work is to outperform the 
+A major goal of this work is to outperform the 
 latest version of \emph{KaHyPar} on most of the benchmark instances and simultaneousely
 ensure that the running time remaining competitive.
 
