final final final final final final version

--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -350,7 +350,7 @@ edges between $u$ and $v$ of the multigraph.
          a work by Newman \cite{newman2004analysis}.}
 \label{img:menger_transformation}
 \end{figure}
-
+\clearpage
 As a consequence of the construction of the proof of Lemma \ref{lemma:undirected_transformation}
 the weighted directed graph illustrated on the right side of
 \autoref{img:menger_transformation}~can be transformed into a single undirected edge with weight
